--- a/bootstraphomework.css
+++ b/bootstraphomework.css
@@ -29,7 +29,10 @@ a{
 
 
 .img-fluid{
-    margin: 20px;
+    margin-top: 20px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    margin-left: 20px;
     padding: 10px;
     border: 50px;  
     max-width:  100%;
@@ -56,8 +59,11 @@ h1{
 
 .aboutme{
     padding:20px;
-    margin: 20px;
-    font-size: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    font-size: 18px;
     max-width: 100%;
     height: auto;
     font-family: monospace
@@ -99,8 +105,11 @@ h2{
     
 }
 .responsive-iframe{
-    margin: 20px;
-    padding: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 0px;
+    padding: 5px;
     border: 20px;  
     width:  100%;
     height: 100%;
@@ -109,16 +118,17 @@ h2{
     border-style: double;
     border-width: 15px;
     
+    
       
     
 }
 .Ph2{
     padding-top: 2px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .sekrit{
-    padding-top: 55px;    
+    padding-top: 105px;    
     margin: 20px;
     font-size: 20px;
     max-width: 100%;
@@ -126,3 +136,9 @@ h2{
     font-family: monospace;
     display: inline-block; 
 }
+
+    
+
+
+  
+
